2006-03-02  Sven Panne  <sven.panne@aedion.de>

	* src/al_mixer.c, src/alc/alc_context.c, src/alc/alc_context.h,
	src/alc/alc_device.c, src/alc/alc_device.h,
	src/extensions/al_ext_loki.c: Made the device's privateData field really
	private.

2006-03-02  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: remove al_ext_capture.c from sources

	* Makefile.am: add admin/CMakeModules/FindPkgConfig.cmake and
	FindSelectArgtypes.cmake to EXTRA_DIST

2006-03-02  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend.h: Fixed comment.

	* include/AL/alext.h, src/Makefile.am, src/al_main.c,
	src/alc/alc_context.c, src/alc/alc_context.h: Removed pre-OpenAL 1.1
	capturing facility. According to Ryan it is unused, apart from Tribes 2,
	but this comes with its own OpenAL, anyway.

	* src/extensions/al_ext_capture.c, src/extensions/al_ext_capture.h:
	Removed.

2006-03-01  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: detect (currently a work-around) and enable nasm
	symbol visibility support in Linux

	* admin/CMakeModules/CMakeASMCompiler.cmake.in,
	admin/CMakeModules/CMakeDetermineASMCompiler.cmake: change a bit more to
	CMake supplied modules' style

	* admin/CMakeModules/CMakeASMInformation.cmake: respect global compiler
	flags

	* admin/CMakeModules/FindCompilerVisibility.cmake: don't pollute
	globally visible compiler flags with gcc specific stuff

	* src/arch/i386/memcpy_mmx_prk.nasm,
	src/arch/i386/x86_cpu_caps_detect_prk.nasm: rename visibility enabling
	definition

2006-02-27  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Variables ALUT_INCLUDE_DIR and ALUT_LIB_DIR introduced,
	so tests can be built w/o globally installed alut more easily; remove
	some debug message; introduce *_INLCUDE_DIR and *_LIB_DIR for back-ends
	and extenstion, and use fall-back if pkg-config fails; hack to make ESD
	back-end compile again; using real select arg types detection

	* admin/CMakeModules/FindSelectArgtypes.cmake: added
	